# particle-life

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  setup.sh
docs/: app.js  index.html  sim.js  style.css
examples/: cells.npy  discovered_universe.npy.txt
particle_life/: __init__.py  cli.py  progress.py
particle_life/core/: __init__.py  discovery.py  engine.py
particle_life/render/: __init__.py  image.py  video.py
tests/: sim.test.mjs  test_engine.py
